# AnNOTEator

./: environment.yml  pyproject.toml
data-preparation/: Cargo.toml  README.md
data-preparation/src/: audio.rs  dataset.rs  lib.rs  main.rs
data-preparation/src/bindings/: python.rs
