[package]
name = "data_preparation"
version = "0.1.0"
edition = "2021"
description = "High-performance dataset generator for drum/audio sequence models"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WAV, FLAC, MP3 support
hound = "3.5"                            # for basic WAV
symphonia = { version = "0.5", features = ["wav", "flac", "mp3"] }

clap = { version = "4.5", features = ["derive"] }

# MIDI
midly = "0.5.3"

# Numpy-style arrays and .npz/.npy export
ndarray = "0.16.1"
ndarray-npy = "0.9.1"

# Serialization (for JSON export or debug)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Optional: for filesystem ops and progress bars
walkdir = "2.4"
indicatif = { version = "0.17", features = ["rayon"] }

# PyO3 bindings
pyo3 = { version = "0.21", features = ["extension-module"], optional = true }

# Error handling, utils
thiserror = "1.0"
anyhow = "1.0"
csv = "1.3.1"
rayon = "1.10.0"

[features]
default = ["python"]
python = ["pyo3"]

[profile.release]
opt-level = "z"
lto = true
strip = true
